# qsave-frontend

./: .gitignore  CHANGELOG.md  README.md  eslint.config.js  index.html  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  release.config.js  tsconfig.json  vitest.config.ts
.github/workflows/: ci-release.yml  release.yml
.husky/: pre-commit
landing/: index.html  package.json  privacy.html  terms.html  vite.config.ts
landing/public/: robots.txt  sitemap.xml
landing/src/: App.tsx  index.css  main.tsx
landing/src/components/: DownloadButtons.tsx  FAQ.tsx  Features.tsx  Footer.tsx  Hero.tsx  LanguageSwitcher.tsx  Nav.tsx  QLogo.tsx  Support.tsx
landing/src/i18n/: index.ts
landing/src/lib/: detectPlatform.ts  releases.ts
landing/src/pages/: LegalLayout.tsx  Privacy.tsx  PrivacyEn.tsx  PrivacyFr.tsx  Terms.tsx  TermsEn.tsx  TermsFr.tsx  privacyMain.tsx  termsMain.tsx
scripts/: load-env.sh  update-versions.js
src/: App.test.tsx  App.tsx  main.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/icons/android/values/: ic_launcher_background.xml
src-tauri/src/: archive.rs  drive_common.rs  drive_download.rs  drive_upload.rs  keychain.rs  lib.rs  logger.rs  oauth.rs
src-tauri/src/scanner/: cache.rs  epic.rs  files.rs  gog.rs  localized_paths.rs  manifest.rs  mod.rs  registry.rs  resolve.rs  steam.rs  types.rs
src/components/AddGameDialog/: AddGameContent.test.tsx  AddGameContent.tsx  AddGameDialog.test.tsx  AddGameDialog.tsx
src/components/AppHeader/: AppHeader.test.tsx  AppHeader.tsx
src/components/ErrorBanner/: ErrorBanner.test.tsx  ErrorBanner.tsx
src/components/GameCard/: GameCard.test.tsx  GameCard.tsx
src/components/GameListPanel/: GameListPanel.test.tsx  GameListPanel.tsx
src/components/GameToolbar/: GameToolbar.test.tsx  GameToolbar.tsx
src/components/LanguageSelector/: LanguageSelector.test.tsx  LanguageSelector.tsx
src/components/SavesList/: SavesList.test.tsx  SavesList.tsx
src/components/SearchBar/: SearchBar.test.tsx
src/components/StatusBar/: StatusBar.test.tsx  StatusBar.tsx
src/components/SyncHistory/: SyncHistory.test.tsx  SyncHistory.tsx
src/components/ui/: badge.tsx  button.tsx  dialog.tsx  scroll-area.tsx  separator.tsx  skeleton.tsx  tooltip.tsx
src/domain/: types.ts
src/hooks/: useAutoSync.ts  useGameDetectionNotify.ts  useGames.ts
src/hooks/useAppUpdate/: useAppUpdate.test.tsx  useAppUpdate.ts
src/hooks/useAutoSync/: useAutoSync.test.tsx  useAutoSync.ts
src/hooks/useGameDetectionNotify/: useGameDetectionNotify.test.ts  (+1 more)
src/lib/: constants.ts  store.ts  watcher.ts
src/services/: auth.ts  drive.ts  scanner.ts  sync.ts
src/stores/: auth.test.ts  auth.ts  sync.test.ts  sync.ts
src/test/: setup.ts  test-utils.tsx
(+116 files in other folders)
