[package]
name = "qsave"
version = "0.1.0"
edition = "2021"

[lib]
name = "qsave_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["tray-icon"] }
tauri-plugin-fs = { version = "2", features = ["watch"] }
tauri-plugin-store = "2"
tauri-plugin-http = "2"
tauri-plugin-autostart = "2"
tauri-plugin-notification = "2"
tauri-plugin-shell = "2"
tauri-plugin-dialog = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_yaml = "0.9"
rayon = "1"
dirs = "6"
reqwest = { version = "0.12", features = ["blocking"] }
open = "5"
zip = { version = "2", default-features = false, features = ["deflate"] }
tokio = { version = "1", features = ["fs"] }

[target.'cfg(windows)'.dependencies]
winreg = "0.52"

[dev-dependencies]
tempfile = "3"
