[package]
name = "qsave"
version = "1.3.2"
edition = "2021"

[lib]
name = "qsave_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["tray-icon"] }
tauri-plugin-fs = { version = "2", features = ["watch"] }
tauri-plugin-store = "2"
tauri-plugin-http = "2"
tauri-plugin-autostart = "2"
tauri-plugin-notification = "2"
tauri-plugin-shell = "2"
tauri-plugin-dialog = "2"
tauri-plugin-updater = "2"
tauri-plugin-process = "2"
tauri-plugin-os = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_yaml = "0.9"
rayon = "1"
dirs = "6"
glob = "0.3"
reqwest = { version = "0.12", features = ["blocking", "json"] }
open = "5"
zip = { version = "2", default-features = false, features = ["deflate"] }
sha2 = "0.11"
tokio = { version = "1", features = ["fs"] }
keyring = { version = "3", features = ["apple-native", "windows-native", "sync-secret-service"] }
urlencoding = "2"

[target.'cfg(windows)'.dependencies]
winreg = "0.52"

[dev-dependencies]
tempfile = "3"
